Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14092

NEXTVAL fails on slave

    XMLWordPrintable

Details

    Description

      In some cases executing NEXTVAL() on a slave can stop replication with
      Unknown error, Error_code: 1105; handler error No Error!

      This can happen when:

      • Executing a NEXTVAL() on the slave (which makes the slave tables out of sync with the master)
      • Executing NEXTVAL() in parallel in seperate threads on the master and both threads allocates new values

      Attachments

        Activity

          People

            monty Michael Widenius
            monty Michael Widenius
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: